[project]
name = "mher"
version = "0.1.0"
authors = [{name = "Bo Liu"}]
description = "Official PyTorch Implementation for Metric Residual Networks for Sample Efficient Goal-Conditioned Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium-robotics>=1.4.2",
    "matplotlib>=3.10.8",
    "mpi4py>=4.1.1",
    "torch>=2.9.1",
]
